<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/home_bottom_height" />

    <RadioGroup
        android:id="@+id/home_rad_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_bottom_height"
        android:layout_alignParentBottom="true"
        android:background="@color/rad_group_bg"
        android:paddingTop="4dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/fragment_price"
            style="@style/home_rad_btn"
            android:drawableTop="@drawable/rad_btn_award"
            android:textColor="@color/rad_btn"
            android:text="@string/price_notice" />

        <RadioButton
            android:id="@+id/fragment_vote"
            style="@style/home_rad_btn"
            android:drawableTop="@drawable/rad_btn_vote"
            android:textColor="@color/rad_btn"
            android:text="@string/goto_vote" />
        <RadioButton
            android:id="@+id/fragment_trailer"
            style="@style/home_rad_btn"
            android:drawableTop="@drawable/preview_effect"
            android:textColor="@color/rad_btn"
            android:text="@string/coming_soon" />
        <RadioButton
            android:id="@+id/fragment_user"
            style="@style/home_rad_btn"
            android:drawableTop="@drawable/rad_btn_person"
            android:textColor="@color/rad_btn"
            android:text="@string/person" />
    </RadioGroup>
</RelativeLayout>