<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/setting_bg"
    android:orientation="vertical">

    <include layout="@layout/title_bar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                style="@style/setting_item_base_style"
                android:layout_height="80dp"
                android:layout_marginTop="6dp"
                android:background="@color/white">

                <TextView
                    style="@style/setting_sign_text_style1"
                    android:text="@string/setting_head" />

                <com.yuyu.android.wct.widget.CircleImageView
                    android:id="@+id/setting_user_icon"
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:src="@drawable/lotus" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/setting_bg" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setting_name_layout"
                style="@style/setting_item_style"
                android:layout_height="@dimen/setting_item_height">

                <TextView
                    style="@style/setting_sign_text_style1"
                    android:text="@string/setting_name" />

                <TextView
                    android:id="@+id/setting_user_name"
                    style="@style/setting_info_text_style"
                    android:text="aaa" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/setting_bg" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/setting_item_base_style"
                android:background="@color/white"
                android:layout_height="@dimen/setting_item_height">

                <TextView
                    style="@style/setting_sign_text_style2"
                    android:text="@string/setting_tel" />

                <TextView
                    android:id="@+id/setting_user_tel"
                    style="@style/setting_info_text_style"
                    android:text="123456789" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/setting_bg" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/setting_item_base_style"
                android:layout_height="@dimen/setting_item_height"
                android:background="@color/white">

                <TextView
                    style="@style/setting_sign_text_style1"
                    android:text="@string/setting_mail" />

                <TextView
                    android:id="@+id/setting_user_mail"
                    style="@style/setting_info_text_style"
                    android:text="aa@qq.com" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@color/setting_bg" />

            <RelativeLayout
                android:id="@+id/setting_theme_layout"
                style="@style/setting_item_style"
                android:visibility="gone"
                android:layout_height="@dimen/setting_item_height">

                <TextView
                    style="@style/setting_sign_text_style1"
                    android:text="@string/setting_choose_theme" />

                <ImageView
                    android:id="@+id/setting_theme_color"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="6dp"
                    android:layout_toLeftOf="@+id/setting_theme_text"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/setting_theme_text"
                    style="@style/setting_info_text_style" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:background="@color/setting_bg" />

            <RelativeLayout
                style="@style/setting_item_base_style"
                android:layout_height="@dimen/setting_item_height"
                android:background="@color/white">

                <TextView
                    style="@style/setting_sign_text_style1"
                    android:text="@string/setting_version" />

                <TextView
                    android:id="@+id/setting_version"
                    style="@style/setting_info_text_style"
                    android:text="1.0.1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/setting_bg" />
            </RelativeLayout>

            <RelativeLayout
                style="@style/setting_item_base_style"
                android:layout_height="@dimen/setting_item_height"
                android:background="@color/white">

                <TextView
                    style="@style/setting_sign_text_style2"
                    android:text="@string/setting_contact" />

                <TextView
                    style="@style/setting_info_text_style"
                    android:text="cs@lotus.club" />
            </RelativeLayout>

            <Button
                android:id="@+id/setting_login_out"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="@dimen/padding_noraml"
                android:layout_marginRight="@dimen/padding_noraml"
                android:layout_marginTop="22dp"
                android:background="@drawable/setting_login_out_btn"
                android:text="@string/login_out"
                android:textColor="@color/setting_text_color1"
                android:textSize="@dimen/setting_text_size" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>