<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/vote_head_height"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/vote_rank_point_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_noraml">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_rate_for_little"
                android:textColor="@color/vote_item_time_color"
                android:textSize="@dimen/vote_text_size1" />

            <TextView
                android:id="@+id/vote_low_point_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="86.73%"
                android:textColor="@color/vote_point_color1"
                android:textSize="@dimen/vote_text_size1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_rate_for_busy"
                android:textColor="@color/vote_item_time_color"
                android:textSize="@dimen/vote_text_size1" />

            <TextView
                android:id="@+id/vote_busy_point_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="86.73%"
                android:textColor="@color/vote_point_color2"
                android:textSize="@dimen/vote_text_size1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vote_last_time_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_time_last"
            android:textColor="@color/vote_item_time_color"
            android:textSize="@dimen/vote_text_size3" />

        <TextView
            android:id="@+id/vote_last_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="12:13"
            android:textColor="@color/vote_item_time_color"
            android:textSize="@dimen/vote_text_size3" />
    </LinearLayout>

</RelativeLayout>